fix overflow issue with code snippets

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -115,8 +115,9 @@ pre code {
 	font-size: 1em;
 	width: auto;
 	min-width: 100%;
+	min-width: min-content;
 	display: block;
-	padding: 1.5rem 2rem;
+	padding: 1.5rem 3rem 1.5rem 2rem;
 }
 pre code::before {
 	content: "LANG";
